--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="ShoreKeeperMains: A classified Tethys System archive dedicated to Shorekeeper from Wuthering Waves. Builds, lore, teams, and materials.">
 
-    <!-- Link to our global stylesheet that handles all Cayo Perico tactical vibes -->
+    <!-- Link to our global stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -117,5 +117,6 @@
     <!-- Global JS Logic -->
     <script src="main.js"></script>
 </body>
+
 
 </html>
