Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <span class="glitch-hover" data-text="SHOREKEEPER_MAINS">SHOREKEEPER_MAINS</span>
             </h1>
 
-            <p class="typewriter" data-typewriter="Welcome to the Black Shores. Decrypting intelligence files..."
+            <p class="typewriter" data-typewriter="Welcome to the Black Shores. Decrypting files..."
                 data-speed="40" data-delay="300"
                 style="display: inline-block; font-size: 1.1rem; color: var(--text-primary);"></p>
         </section>
@@ -120,3 +120,4 @@
 
 
 </html>
+
