--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                     <span class="panel-meta">LIVE FEED</span>
                 </header>
                 <div class="panel-content">
-                    <p>Connect with other operatives in the Black Shores network to share intelligence.</p>
+                    <p>Connect with other operatives in the Black Shores network.</p>
                     <ul class="data-list" style="margin-top: 1rem;">
                         <li>
                             <span class="data-label">Secure Channel: Discord</span>
-                            <a href="#" class="data-val data-highlight">[ JOIN SECURE COMM ]</a>
+                            <a href="#" class="data-val data-highlight">[ JOIN SECURE SPACE ]</a>
                         </li>
                         <li>
                             <span class="data-label">Public Feed: Reddit</span>
@@ -120,4 +120,5 @@
 
 
 </html>
+
 
